Remove guava collections in `phenol-io` production